# legacy-launcher

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  resources.qrc
assets/: main.qss
include/: AddInstanceDialog.h  Downloader.h  GitHubReleaseTracker.h  InstanceManager.h  InstanceWidget.h  LaunchManager.h  MainWindow.h  ProtonDetector.h  SettingsDialog.h  Types.h  UpdateInstanceDialog.h  WeaveLoaderReleaseTracker.h
packaging/: dev.neoapps.LegacyLauncher.metainfo.xml  dev.neoapps.LegacyLauncher.yml  legacy-launcher.desktop
src/: AddInstanceDialog.cpp  Downloader.cpp  GitHubReleaseTracker.cpp  InstanceManager.cpp  InstanceWidget.cpp  LaunchManager.cpp  MainWindow.cpp  ProtonDetector.cpp  SettingsDialog.cpp  UpdateInstanceDialog.cpp  WeaveLoaderReleaseTracker.cpp  main.cpp
